tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_44.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((+ ((1 - 1223) - (1223 * 0))) < (((x + x) * (x - 1)) + ((- 1223) DIV (2 DIV z))));
               z := ((((0 DIV z) + (200 * x)) + ((+ 1223) - (0 + y))) + (((+ 2) DIV (z * x)) * (- (1223 * 2))));
               x := ((((x - 200) DIV (z DIV 1)) * ((+ 2) DIV (x - 1223))) - (((1 * 1) - (z DIV 1223)) MOD (- (200 + y))));
               y := (+ (((1 DIV 1223) + (1 - 0)) - ((1223 DIV 2) - (1 DIV 1))));
               y := ((- ((1223 DIV 200) - (- 2))) - (((+ z) DIV (- x)) DIV ((z MOD 1223) * (200 - 1))));
  (* error *)  y := (((- (p DIV 1223)) + ((z MOD 1223) + (0 - 200))) - (+ ((+ 200) DIV (1223 DIV z))));
               y := ((((- x) DIV (200 * 2)) MOD ((+ x) MOD (2 + y))) DIV (- ((0 DIV 200) * (200 * 2))));
               y := ((((+ 1) + (2 - 1223)) * (- (200 * y))) DIV (((y + 2) * (0 * 200)) DIV (- (y * x))));
               q := ((((1223 + 1223) DIV (+ y)) * ((x * 200) * (- 1))) > (((200 DIV 1223) + (2 * y)) * ((200 - x) + (y DIV x))));
               q := ((- ((- 0) DIV (200 - 1223))) < (((+ 2) - (1223 + 1)) DIV ((0 + 1) MOD (2 - 1))))
END Test16.